--- a/apps/userprofile/templates/core/signup.html
+++ b/apps/userprofile/templates/core/signup.html
@@ -10,13 +10,20 @@
     <form id="signUpForm" method="post" autocomplete="off">      
         <h1 class="heading">Lag bruker</h1>
         {% csrf_token %}
-        {{ form.non_field_errors }}
-        {{form.errors}}
         <br>
         <!-- USER SIGNUP FORM INPUTS -->
         <div class="signup-form-inputs">
+            {% if form.errors %}
+                {% for field in form %}
+                    {% for error in field.errors %} 
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
             <!-- NAME -->
-            <label for="username">Navn</label>
+            <label for="username">Brukernavn</label>
             <br>
             <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
             <br>
@@ -51,7 +58,7 @@
             <input type="password" id="password2" name="password2" required oninvalid="this.setCustomValidity('Du må gjenta passordet')" oninput="this.setCustomValidity('')">
         </div> 
         <div class="form-actions">
-            <button onclick="orderLoading()" name="order" value="order" type='submit'>Logg inn</button>
+            <button type='submit'>Lag bruker</button>
         </div>
         <br>
         <br>
