--- a/static/scss/userprofile/myaccount.scss
+++ b/static/scss/userprofile/myaccount.scss
@@ -17,11 +17,60 @@
       border-radius: 7px;
         // ACCOUNT HEADING
         .heading{
-        color: #183B56;
-        font-size: 22px;
-        font-weight: 800;
-        text-shadow: 1px 0 #183B56;
-        letter-spacing:1px; 
+          color: #183B56;
+          font-size: 20px;
+          font-weight: 800;
+          text-shadow: 1px 0 #183B56;
+          letter-spacing:1px; 
+        }
+        // LOG OUT
+        .myaccount-logout{
+          font-size: 13px;
+          font-weight: 800;
+        }
+        // YOUR INFO
+        .your-info{
+          margin: 14px 0;
+          p{
+            color: #183B56;
+            font-size: 15px;
+            span{
+              font-weight: 800;
+            }
+          }
+        }
+        // MY ORDERS
+        .my-orders{
+          margin: 30px 0;
+          .you-got-orders{
+            margin: 20px 0;
+            text-align: left;
+            background: transparent;
+            width: 93%;
+            max-width: 300px;
+            box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+            padding: 20px;
+            border-radius: 7px;
+            p{
+              color: #183B56;
+              font-size: 15px;
+              width: 100%;
+              span{
+                font-weight: 800;
+              }
+            }
+            button{
+              border-radius: 4px;
+              width: 200px;
+              font-size: 16px;
+              padding: 10px;
+              transition: all .2s ease-in-out;
+              color: white;
+              outline: none;
+              border: none;
+              background: #0088F9; 
+            }
+          }
         }
     }
 }
