--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -254,7 +254,7 @@
          <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Send bestillingen</h1>
-            <p>Nå trenger du ikke gjøre noe mer, med engang bestillingen har blitt motatt vil designere våres se over kravene dine</p>
+            <p>Nå trenger du ikke gjøre noe mer, med engang bestillingen har blitt motatt vil designere våres starte å lage designen</p>
          </div>
       </div>
       <!-- PROCCESS CARD -->
@@ -269,7 +269,7 @@
          <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Vent på svar</h1>
-            <p>Ta deg en kopp kafe og slapp av mens vi lagere designen!</p>
+            <p>Ta deg en kopp kafe og slapp av mens vi gjør jobben!</p>
          </div>
       </div>
 
@@ -359,13 +359,13 @@
       <p class="edit-longp">
          Om du ønsker å endre noe på nettsiden, så kan vi hjelpe deg med det HELT GRATIS kunn i 14 dager etter bestilling.
          Etter 14 dager så blir det en pris som du og oss kommer til enighet, avhengig hvor mye du vil endre på nettsiden.
+         For å spørre om endringer må du gå til <strong>"Min bruker"</strong>. Der kan du se en liste over alle bestillingene dine, hvor du kan spørre om endringer på nettsiden.
+         Du trenger bare å sende inn et skjema, og vi skal komme tilbake til deg innen 30 min.
       </p>
-      <!-- WEBSITE EDITS ACTION  -->
-      <div class="webiste-edit-action">
-         <a href="/sporr-om-endringer">Spørr her</a>
-      </div>
+      <!-- EDIT IMAGE -->
+      <img class="edit-image" src="{% static '/images/other/edit.png' %}" alt="hosting">
    </div>
-   <!-- IMAGE -->
+   <!--  BLUE IMAGE -->
    <img src="{% static '/images/other/blue-line.png' %}" alt="hosting">
 </div>
 <!-- PRICES -->
@@ -386,37 +386,13 @@
                   <!-- ECOMMERCE -->
                   <ul>
                      {% if product.is_ecommerce %}
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     <li>ecommerce</li>
-                     {% endif %}
-                     <!-- BLOG -->
-                     {% if product.is_blog %}
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
-                     <li>blog</li>
+                     <li>Konverter</li>
+                     <li>Modern</li>
+                     <li>Responsiv</li>
+                     <li>Lav pris</li>
+                     <li>Selg alt</li>
+                     <li>Bedrift</li>
+                     <li>Rask levering</li>
                      {% endif %}
                   </ul>
                </div>
