--- a/apps/userprofile/templates/core/myaccount.html
+++ b/apps/userprofile/templates/core/myaccount.html
@@ -43,7 +43,7 @@
                             {% endif %}
                             <button>Spørr om endringer</button>
                         {% else %}
-                            <div class="alert alert-info">Du kan spørre om endringer på nettsiden her da bestillingen er fullført</div>   
+                            <div class="alert alert-info">Du kan spørre om endringer på nettsiden her, da nettsiden er fullført</div>   
                         {% endif %}
                     </p>
                 </div>            
