--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -501,50 +501,33 @@
   font-size: 16px;
 }
 
-.edit .webiste-edit-action {
-  -webkit-transform: translateY(45px);
-          transform: translateY(45px);
-}
-
-.edit .webiste-edit-action a {
-  background: #007be0;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  right: 16px;
-  cursor: pointer;
-  text-align: center;
-  border-radius: 15px;
-  -webkit-transition: .2s;
-  transition: .2s;
-  font-size: 14px;
-  border-radius: 4px;
-  text-decoration: none;
-  color: white;
-  outline: none;
-  border: none;
-  background: #0088F9;
-  font-weight: 600;
-}
-
-.edit .webiste-edit-action a:hover {
-  -webkit-filter: brightness(85%);
-          filter: brightness(85%);
-}
-
-.edit .webiste-edit-action a:focus {
-  -webkit-filter: brightness(85%);
-          filter: brightness(85%);
-}
-
-.edit .webiste-edit-action a:active {
-  -webkit-filter: brightness(85%);
-          filter: brightness(85%);
+.edit .edit-image {
+  width: 80%;
+  height: auto;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+  max-width: 420px;
+  -webkit-filter: brightness(100%);
+          filter: brightness(100%);
+  -webkit-transform: translateX(-50%) translateY(40px);
+          transform: translateX(-50%) translateY(40px);
+  position: relative;
+  left: 50%;
 }
 
 .edit img {
-  -webkit-transform: translateY(105px) translateX(-30px);
-          transform: translateY(105px) translateX(-30px);
+  image-rendering: -moz-crisp-edges;
+  /* Firefox        */
+  image-rendering: -o-crisp-edges;
+  /* Opera          */
+  image-rendering: -webkit-optimize-contrast;
+  /* Safari         */
+  image-rendering: optimize-contrast;
+  /* CSS3 Proposed  */
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE8+           */
+  -webkit-transform: translateY(75px) translateX(-30px);
+          transform: translateY(75px) translateX(-30px);
   width: 120%;
   max-width: 400px;
   -o-object-fit: contain;
@@ -558,7 +541,7 @@
   background: white;
   width: 100%;
   height: auto;
-  margin-top: 120px;
+  margin-top: 60px;
   padding: 25px;
   position: relative;
 }
