--- a/static/scss/pages/kundeservice/contact.scss
+++ b/static/scss/pages/kundeservice/contact.scss
@@ -60,8 +60,8 @@ $loader: rgb(80, 104, 180);
             transition: all .2s ease-in-out;
             color: white;
             outline: none;
-            border: none;
-            background: #0088F9;      
+            background: #008cff;  
+            border: 2px solid #007de4;    
           }
         }
       }
