--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -151,7 +151,7 @@
   transition: all .2s ease-in-out;
   color: white;
   outline: none;
-  border: none;
-  background: #0088F9;
+  background: #008cff;
+  border: 2px solid #007de4;
 }
 /*# sourceMappingURL=order.css.map */
