--- a/static/scss/userprofile/login.css
+++ b/static/scss/userprofile/login.css
@@ -60,7 +60,8 @@
   color: white;
   outline: none;
   border: none;
-  background: #0088F9;
+  background: #008cff;
+  border: 2px solid #007de4;
 }
 
 .login form .or-signup {
