--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -56,7 +56,8 @@ $loader: rgb(80, 104, 180);
             color: white;
             outline: none;
             border: none;
-            background: #0088F9;      
+            background: #008cff;  
+            border: 2px solid #007de4;    
           }
         }
         .or-signup{
