--- a/static/scss/userprofile/signup.css
+++ b/static/scss/userprofile/signup.css
@@ -59,8 +59,8 @@
   transition: all .2s ease-in-out;
   color: white;
   outline: none;
-  border: none;
-  background: #0088F9;
+  background: #008cff;
+  border: 2px solid #007de4;
 }
 
 .signup form .or-login {
