--- a/apps/userprofile/templates/core/myaccount.html
+++ b/apps/userprofile/templates/core/myaccount.html
@@ -41,7 +41,7 @@
                             {% else %}
                             <div class="alert alert-warning">Husk at du har gratis endringer kunn i 14 dager etter bestillingen har blitt fullført</div> 
                             {% endif %}
-                            <button>Spørr om endringer</button>
+                            <button onclick="window.location.href='/sporr-om-endringer'">Spørr om endringer</button>
                         {% else %}
                             <div class="alert alert-info">Du kan spørre om endringer på nettsiden her, da nettsiden er fullført</div>   
                         {% endif %}
