--- a/static/scss/pages/kundeservice/contact.css
+++ b/static/scss/pages/kundeservice/contact.css
@@ -67,6 +67,6 @@
   color: white;
   outline: none;
   background: #008cff;
-  border: 2px solid #007de4;
+  border: 2px solid #0082ec;
 }
 /*# sourceMappingURL=contact.css.map */
