--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -152,6 +152,6 @@
   color: white;
   outline: none;
   background: #008cff;
-  border: 2px solid #007de4;
+  border: 2px solid #0082ec;
 }
 /*# sourceMappingURL=order.css.map */
