--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -57,7 +57,7 @@ $loader: rgb(80, 104, 180);
             outline: none;
             border: none;
             background: #008cff;  
-            border: 2px solid #007de4;    
+            border: 2px solid #0082ec; 
           }
         }
         .or-signup{
