--- a/static/scss/userprofile/myaccount.scss
+++ b/static/scss/userprofile/myaccount.scss
@@ -67,8 +67,8 @@
               transition: all .2s ease-in-out;
               color: white;
               outline: none;
-              border: none;
-              background: #0088F9; 
+              background: #008cff;  
+              border: 2px solid #0082ec;   
             }
           }
         }
