--- a/static/scss/userprofile/signup.css
+++ b/static/scss/userprofile/signup.css
@@ -60,7 +60,7 @@
   color: white;
   outline: none;
   background: #008cff;
-  border: 2px solid #007de4;
+  border: 2px solid #0082ec;
 }
 
 .signup form .or-login {
