--- a/static/scss/userprofile/signup.scss
+++ b/static/scss/userprofile/signup.scss
@@ -56,7 +56,7 @@ $loader: rgb(80, 104, 180);
             color: white;
             outline: none;
             background: #008cff;  
-            border: 2px solid #007de4;  
+            border: 2px solid #0082ec; 
           }
         }
         .or-login{
