--- a/apps/core/templates/pages/edit.html
+++ b/apps/core/templates/pages/edit.html
@@ -15,14 +15,14 @@
            <input type="email" name="email" required oninvalid="this.setCustomValidity('Værsåsnill, skirv inn epost')" oninput="this.setCustomValidity('')">      
            <br>
            <br>
-           <label for="email">Bestilling ID</label>
+           <label for="order_id">Bestilling ID</label>
            <br>
-           <input type="email" name="email" required oninvalid="this.setCustomValidity('Værsåsnill, skirv inn bestilling ID')" oninput="this.setCustomValidity('')">      
+           <input type="number" name="order_id" required oninvalid="this.setCustomValidity('Værsåsnill, skirv inn bestilling ID')" oninput="this.setCustomValidity('')">      
            <br>
            <br>
           </div>
         <div class="form-actions">
-          <button type="submit" name="contact" value="contact">Send</button>
+          <button type="submit" name="edit" value="edit">Send</button>
         </div>
       </form>
    </div>
