--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -56,8 +56,8 @@ $loader: rgb(80, 104, 180);
             color: white;
             outline: none;
             border: none;
-            background: #008cff;  
-            border: 2px solid #0082ec; 
+            border: none;    
+            background: #0082ec;  
           }
         }
         .or-signup{
