--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -565,7 +565,7 @@
   border: none;
   outline: none;
   border-radius: 12px;
-  padding-bottom: 50px;
+  padding-bottom: 0;
   border: 2px solid #007be056;
 }
 
@@ -580,26 +580,36 @@
   font-weight: 800;
 }
 
+.prices .content .product-section .card .product-type {
+  font-weight: 800;
+  color: white;
+  background: -webkit-gradient(linear, left top, right top, from(#007be0), to(purple));
+  background: linear-gradient(to right, #007be0, purple);
+  width: 100px;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(25px);
+          transform: translateX(-50%) translateY(25px);
+  font-size: 12px;
+  border-radius: 20px;
+}
+
 .prices .content .product-section .card .product-price {
-  font-size: 13px;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
+  font-size: 14px;
+  -webkit-transform: translateY(40px);
+          transform: translateY(40px);
   font-weight: 800;
 }
 
 .prices .content .product-section .card .included {
   width: 50%;
-  position: relative;
-  left: 50%;
-  -webkit-transform: translateY(40px) translateX(-50%);
-          transform: translateY(40px) translateX(-50%);
   padding: 10px;
 }
 
 .prices .content .product-section .card .included ul {
   overflow: hidden;
   overflow-y: scroll;
-  height: 100px;
+  height: 103px;
   -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, color-stop(60%, #000), to(transparent));
   -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
 }
@@ -608,7 +618,8 @@
   opacity: 0.7;
   margin: 0;
   list-style: none;
-  font-size: 14px;
+  font-size: 15px;
+  font-weight: 800;
 }
 
 .prices .content .product-section .card .included ul li::before {
@@ -622,42 +633,6 @@
   /* Needed to add space between the bullet and the text */
   width: 1em;
   /* Also needed for space (tweak if needed) */
-}
-
-.prices .content .product-section .card .product-actions {
-  -webkit-transform: translateY(30px) translateX(0);
-          transform: translateY(30px) translateX(0);
-}
-
-.prices .content .product-section .card .product-actions a {
-  border-radius: 4px;
-  padding: 13px 10px;
-  font-size: 14px;
-  color: white;
-  font-weight: 600;
-  margin: 2px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-  -webkit-transition: .4s;
-  transition: .4s;
-  border: 2px solid transparent;
-  text-decoration: none;
-  background: #072546;
-  width: 55%;
-  max-width: 250px;
-}
-
-.prices .content .product-section .card .product-actions a i {
-  -webkit-transform: translateX(18px) translateY(2px);
-          transform: translateX(18px) translateY(2px);
 }
 
 .our-story {
