--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -27,6 +27,11 @@
   letter-spacing: 1px;
 }
 
+.make-order form .order-not-login a {
+  font-size: 13px;
+  font-weight: 800;
+}
+
 .make-order form .order-form-inputs label {
   color: #183B56;
   font-size: 15px;
@@ -151,7 +156,7 @@
   transition: all .2s ease-in-out;
   color: white;
   outline: none;
-  background: #008cff;
-  border: 2px solid #0082ec;
+  border: none;
+  background: #0082ec;
 }
 /*# sourceMappingURL=order.css.map */
