--- a/static/scss/userprofile/signup.scss
+++ b/static/scss/userprofile/signup.scss
@@ -55,8 +55,8 @@ $loader: rgb(80, 104, 180);
             transition: all .2s ease-in-out;
             color: white;
             outline: none;
-            background: #008cff;  
-            border: 2px solid #0082ec; 
+            border: none;    
+            background: #0082ec;   
           }
         }
         .or-login{
